# surveil

./: .gitignore  LICENSE  README.md  app.jsx  diff.patch  index.html  package-lock.json  package.json  skills-lock.json  vite.config.js
docs/: architecture.md  installation.md  introduction.md  maintenance.md  usage.md
public/templates/: template.csv  template.json
scripts/: setup_binaries.js
src/: App.css  App.jsx  errorLogger.js
src-tauri/: .taurignore  Cargo.toml  surveil.sqlite3  surveil_core.sqlite3  surveil_core.sqlite3-shm  surveil_core.sqlite3-wal  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/camera/: manager.rs  mediamtx.rs  mod.rs  stream.rs
src-tauri/src/transport/: mediamtx_config.rs  mod.rs  websocket.rs
src/components/: AddCameraModal.jsx  CameraDetailsSidebar.jsx  CameraModal.jsx  EditCameraModal.jsx  PreferencesMenu.jsx  TheaterMode.jsx
src/components/camera/: CameraCard.jsx  LiveStreamVideo.jsx
src/components/layout/: TitleBar.jsx
src/components/ui/: AnimatedBeam.jsx  AnimatedGradientText.jsx  Badge.jsx  Button.jsx  Dialog.jsx  Dock.jsx  Input.jsx  InteractiveHoverButton.jsx  MagicCard.jsx  RetroGrid.jsx  ShimmerButton.jsx  SmartLabelInput.jsx  ThemeToggle.jsx
src/hooks/: useCameraForm.js  useCameras.js  usePreferences.js
src/lib/: utils.js
src/store/: cameraStore.js
temp/: MEDIAMTX_IMPLEMENTATION.md
tests/: setup_ffmpeg.js
